바이탈.문진 버튼 구현/